--- a/examples/Market_a_Jet_Backpack.ipynb
+++ b/examples/Market_a_Jet_Backpack.ipynb
@@ -3,16 +3,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/shannonkeith/BotBuilder-Samples/blob/master/examples/Market_a_Jet_Backpack.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "Tce3stUlHN0L"
       },
       "source": [
@@ -109,11 +99,11 @@
       "execution_count": 9,
       "metadata": {
         "id": "mIUxhHbFyZlf",
-        "outputId": "7cd0f3e6-29d4-4c55-8e2e-d442a731e8ac",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 287
-        }
+        },
+        "outputId": "7cd0f3e6-29d4-4c55-8e2e-d442a731e8ac"
       },
       "outputs": [
         {
@@ -358,12 +348,12 @@
       "execution_count": null,
       "metadata": {
         "id": "GioGOu5xspug",
-        "outputId": "2682c14f-35c5-4bb0-e0e0-845392f0a2b4",
         "colab": {
           "referenced_widgets": [
             "9da6ed0bb06547a4811a687cf4108d05"
           ]
-        }
+        },
+        "outputId": "2682c14f-35c5-4bb0-e0e0-845392f0a2b4"
       },
       "outputs": [
         {
@@ -715,8 +705,7 @@
     "colab": {
       "name": "Market_a_Jet_Backpack.ipynb",
       "toc_visible": true,
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3",
